mus/mash initializes Ozone single-process correctly.

Both mus-ws and viz services run in the same process. Ozone X11 was
looking for --mojo-platform-channel-handle to know it was running in
mus/mash mode and should assume single-process mode. That flag no longer
appears and Ozone X11 now starts in multi-process mode. This means
XInitThreads() isn't called and weird X errors / crashes will occur.

This CL fixes how we set InitParams::single_process flag when starting
Ozone.
1. ui::Service::OnStart() is always single-process.
2. GPU initialization from viz GpuMain is always single process.
3. GPU initialization from content GpuMain is always multi-process,
   there is another path for single-process from content.
4. Add checks for --single-process and --in-process-gpu in aura::Env.

Also fix Ozone DRM. There is current only a single-process mojo mode, so
make sure that if |using_mojo_| then |single_process_| is also true.

Bug: 753884
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I420a5765cc840b3b7a7a1d65a3837afc036d5827
Reviewed-on: https://chromium-review.googlesource.com/610380
Reviewed-by: Robert Kroeger <rjkroege@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#493531}
Former-commit-id: b3703d41c568f09f0747b76daf6f5e8ce76ee5a0